fixed spacing

--- a/new.css
+++ b/new.css
@@ -87,7 +87,7 @@ a, a:link, a:visited {
 #right a, a:link, a:visited {
   color: #D44106;
   font-size: 18px;
-  padding: 12px;
+
 }
 
 .btn a, a:link, a:visited {
@@ -157,9 +157,9 @@ a, a:link, a:visited {
 
 
 ul {
-  padding-left: 00px;
+  padding-left: 0px;
   list-style-type: none;
-  text-indent: -15px;
+  text-indent: -5px;
   margin-left: 5px;
 }
 
@@ -264,6 +264,7 @@ ul li {
 	
 	h2 {
 		font-size: 16px;
+		margin-left: 10px;
 	}
 	p {
 		font-size: 16px;
